@@ -231,15 +231,18 @@ static const cyg_uint32 const flexbus_pins[] = {
     CYGHWR_KINETIS_FB_PIN_AD14,
     CYGHWR_KINETIS_FB_PIN_AD15,
     CYGHWR_KINETIS_FB_PIN_AD16,
-    CYGHWR_KINETIS_FB_PIN_AD17,
+    CYGHWR_KINETIS_FB_PIN_AD17
+# if CYGHWR_HAL_KINETIS_FB_CS0_SIZE > 0x00040000
+    ,
     CYGHWR_KINETIS_FB_PIN_AD18,
     CYGHWR_KINETIS_FB_PIN_AD19,
-# if 1 //CYGHWR_HAL_KINETIS_FB_CS0_SIZE > 0x00100000
     CYGHWR_KINETIS_FB_PIN_AD20,
-    CYGHWR_KINETIS_FB_PIN_AD21,
+    CYGHWR_KINETIS_FB_PIN_AD21
+#  if CYGHWR_HAL_KINETIS_FB_CS0_SIZE > 0x00400000
+    ,
     CYGHWR_KINETIS_FB_PIN_AD22,
     CYGHWR_KINETIS_FB_PIN_AD23
-#  if 0 //!(CYGHWR_HAL_KINETIS_FB_CS_CR(0) & CYGHWR_HAL_FB_CSCR_BLS_M)
+#   if 0 //!(CYGHWR_HAL_KINETIS_FB_CS_CR(0) & CYGHWR_HAL_FB_CSCR_BLS_M)
     ,
     CYGHWR_KINETIS_FB_PIN_AD24,
     CYGHWR_KINETIS_FB_PIN_AD25,
@@ -249,8 +252,9 @@ static const cyg_uint32 const flexbus_pins[] = {
     CYGHWR_KINETIS_FB_PIN_AD29,
     CYGHWR_KINETIS_FB_PIN_AD30,
     CYGHWR_KINETIS_FB_PIN_AD31
-#  endif
-# endif // CYGHWR_HAL_KINETIS_FB_CS0_SIZE > 0x00100000
+#   endif
+#  endif  // CYGHWR_HAL_KINETIS_FB_CS0_SIZE > 0x00400000
+# endif // CYGHWR_HAL_KINETIS_FB_CS0_SIZE > 0x00040000
 };
 
 static const cyg_uint32 const flexbus_pins_final_diff[] = {
