@@ -1,5 +1,16 @@
 2012-01-06 Ilija Kocho  <ilijak@siva.com.mk>
 
+	* cdl/hal_cortexm_kinetis_twr_k60n512_fxm.cdl,
+	* include/pkgconf/mlt_kinetis_flash_sram2s_extram_rom.h
+	* include/pkgconf/mlt_kinetis_flash_sram2s_extram_rom.ldi
+	* include/pkgconf/mlt_kinetis_flash_unisram_extram_rom.h
+	* include/pkgconf/mlt_kinetis_flash_unisram_extram_rom.ldi
+	* /src/twr_k60n512_fxm_misc.c
+	Fixed memory layout for FlexBus memory. Add different pin options
+	[Bugzilla 1001579]
+
+2012-01-06 Ilija Kocho  <ilijak@siva.com.mk>
+
 	* cdl/hal_cortexm_kinetis_twr_k60n512_fxm.cdl:
 	* include/plf_arch.h:
 	* include/plf_intr.h:
